fix: resolve sonarqube code smells in Group.java